--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -14,10 +14,14 @@
           <a class="nav-link" href="{{ url_for('about') }}">About</a>
         </li>
       </ul>
-
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('secure_page') }}">Login</a>
         </li>
       </ul>
     </div>
