--- a/app/templates/secure_page.html
+++ b/app/templates/secure_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
+{% include 'flash_messages.html' %}
 <h1 class="page-header">Secure Page</h1>
 <p>“Don’t limit yourself. Many people limit themselves to what they think they can do. 
     You can go as far as your mind lets you. What you believe, remember, you can achieve.” – Mary Kay Ash</p>
